<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_home_icon" />

            <TextView
                android:id="@+id/txt_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/txt_tiffin_heading"
                android:textColor="@color/txt_color"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_main_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/txt_tiffin_search"
                android:textColor="@color/txt_color_small"
                android:textSize="@dimen/text_size_mediun"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/bg_search"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="7dp"
                    android:src="@drawable/ic_search_sky" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="@color/edt_search_border" />

                <TextView
                    android:id="@+id/edt_search_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:hint="@string/search_hint"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="normal" />

                <!--<EditText-->
                <!--android:id="@+id/edt_search_input"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--android:background="@null"-->
                <!--android:focusable="true"-->
                <!--android:hint="@string/search_hint"-->
                <!--android:imeOptions="actionDone"-->
                <!--android:padding="10dp"-->
                <!--android:singleLine="true"-->
                <!--android:textColor="@color/black"-->
                <!--android:textColorHint="@color/hint_color"-->
                <!--android:textSize="@dimen/text_size_small"-->
                <!--android:textStyle="normal" />-->
            </LinearLayout>

            <TextView
                android:id="@+id/txt_main_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="By clicking above you are agree our terms and privacy policy"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_main_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txt_tiffin_extra"
                android:textColor="@color/txt_color_small"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/btn_add_details"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_add_post_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_main_advertise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_tiffin_advertise"
                    android:textColor="@color/txt_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_main_advertise1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="Free"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_main_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/txt_tiffin_broadcast"
                android:textColor="@color/txt_color_small"
                android:textSize="@dimen/text_size_mediun"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_main_visit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="To manage posted info  Please visit www.tiffinmap.com"
        android:textColor="@color/black"
        android:textSize="12sp" />

</LinearLayout>
